--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ h3{
     margin-bottom: 8px;
 }
 
+textarea{
+    resize: none;
+}
+
 button {
     font: inherit;
     padding: 0;
@@ -141,6 +145,7 @@ body.overflow {
     bottom: 0;
     margin-top: 20px;      
     background-color: transparent;
+    transition: background-color 250ms var(--cubic);
 }
 
 .nav-link:hover::after {
@@ -159,15 +164,6 @@ body.overflow {
     background-color: var(--hover-color);
 }
 
-/* .nav-link::after {
-    content: "";
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-color: #31D0AA;
-    color: red; */
-}
-
 .logo-link{
     margin-right: 76px;
 }
@@ -176,14 +172,14 @@ body.overflow {
     color: var(--title-text-color);
 
     font-weight: 500;
-
     text-decoration: none;
+    transition: color 250ms var(--cubic);
 }
 
-.site-nav a:hover, 
+/* .site-nav a:hover, 
 .site-nav a:focus {
     color: var(--hover-color);
-}
+} */
 
 .site-nav .current {
     color: var(--hover-color);
@@ -194,6 +190,7 @@ color: var(--primary-text-color);
 
 text-decoration: none;
 font-style: normal;
+transition: color 250ms var(--cubic);
 }
 
 .site-addres a:hover, 
@@ -230,6 +227,7 @@ font-style: normal;
     letter-spacing: 0.04em;
 
     cursor: pointer;
+    transition: color 250ms var(--cubic), background-color 250ms var(--cubic), box-shadow 250ms var(--cubic);
 }
 
 .button.primary {
@@ -393,6 +391,7 @@ font-style: normal;
     align-items: center;
     justify-content: center;
     background-color: var(--accent-text-color);
+    transition: background-color 250ms var(--cubic);
 }
 
 .team-links:hover,
@@ -426,6 +425,7 @@ font-style: normal;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: border 250ms var(--cubic);
 }
 
 .customer-link:hover,
@@ -440,6 +440,7 @@ font-style: normal;
 
 .customer-icon {
     fill: var(--icons-customer-color);
+    transition: fill 250ms var(--cubic);
 }
 
 /* Підвал footer*/
@@ -486,6 +487,7 @@ font-style: normal;
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms var(--cubic);
 }
 
 .footer-link-icon{
@@ -510,24 +512,53 @@ font-style: normal;
     max-width: 100%;
     min-height: 600px;
     background-color: var(--primary-bg-color);
+    padding: 72px 24px 24px 24px;
+
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms var(--cubic);
 }
 
-.modal-battom{
+.backdrop.is-hidden > .modal{
+    transform: translate(-50%, -50%) scale(0.6);
+}
+
+.modal-buttom{
     width: 24px;
     height: 24px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: #E7E9FC;;
+    background-color: #E7E9FC;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 24px;
     right: 24px;
+    transition: background-color 250ms var(--cubic), color 2500ms var(--cubic);
+}
+
+.modal-buttom:hover,
+.modal-buttom:focus {
+    background-color: var(--hover-color);
+    
+}
+
+.modal-close {
+    fill: var(--title-text-color);
+    transition: fill 250ms var(--cubic);
+}
+
+.modal-buttom:hover .modal-close {
+    fill: #ffffff;
+}
+
+.modal-flex {
+    display: flex;
+    flex-direction: column;
+
 }
 
 /*Portfolio*/
@@ -563,6 +594,7 @@ font-style: normal;
     border-right: 1px solid #E7E9FC;
     border-bottom: 1px solid #E7E9FC;
     border-left: 1px solid #E7E9FC;
+    transition: border 250ms var(--cubic), border-top 250ms var(--cubic), box-shadow 250ms var(--cubic);
 }
 
 .portfolio-link:hover .card-signature,
