--- a/css/styles.css
+++ b/css/styles.css
@@ -552,9 +552,7 @@ transition: color 250ms var(--cubic);
     top: 0;
     left: 0;
     overflow: auto;
-    /* opacity: 0;
-    visibility: hidden; */
-    /* transition: transform 2500ms var(--cubic); */
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -570,12 +568,12 @@ transition: color 250ms var(--cubic);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    transition: transform 250ms var(--cubic);
+    /* transition: transform 250ms var(--cubic); */
 }
 
-.backdrop.is-hidden > .modal{
+/* .backdrop.is-hidden > .modal{
     transform: translate(-50%, -50%) scale(0.4);
-}
+} */
 
 .modal-buttom{
     width: 24px;
